k8s/overlays/staging/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: blacklist
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
spec:
  type: LoadBalancer
